[package]
name = "liganite-primitives"
description = "Common types for the liganite network"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
]
