[package]
name = "liganite-primitives"
description = "Common types for the liganite network"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }

scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "scale-codec/std",
    "scale-info/std",
]
